--- a/semaforo.html
+++ b/semaforo.html
@@ -8,15 +8,19 @@
 </head>
 
 <body>
-<div class="container">
-    <span class="vermelho"></span>
-    <span class="amarelo"></span>
-    <span class="verde"></span>
+    <div class="container">
+        <span class="vermelho"></span>
+        <span class="amarelo"></span>
+        <span class="verde"></span>
 
-</div>
+    </div>
+    <div class="button">
+        <button onclick=off()>OFF</button>
+        <button onclick=on()>ON</button>
+    </div>
 </body>
-<footer>
-    Desenvolvido por: 
-</footer>
+    <footer>
+        Desenvolvido por: Guilherme / João Paulo / Evandro / 
+    </footer>
 
 </html>
