--- a/semaforo.html
+++ b/semaforo.html
@@ -20,7 +20,7 @@
     </div>
 </body>
     <footer>
-        Desenvolvido por: Guilherme / João Paulo / Evandro / 
+        Desenvolvido por: Guilherme / João Paulo / Evandro / Isabella / 
     </footer>
 
 </html>
