--- a/semaforo.html
+++ b/semaforo.html
@@ -9,7 +9,9 @@
 
 <body>
     <div class="container">
-        <span class="vermelho"></span>
+        <span class="vermelho">
+                <source id="audio" src="apito.mp3" type="audio/mp3" /> 
+        </span>
         <span class="amarelo"></span>
         <span class="verde"></span>
 
