--- a/semaforo.html
+++ b/semaforo.html
@@ -22,7 +22,7 @@
     </div>
 </body>
     <footer>
-        Desenvolvido por: Guilherme / João Paulo / Evandro / Isabella / Jayne
+        Desenvolvido por: Guilherme
     </footer>
 
 </html>
